Lesson05 add ti git directory

--- a/app/lesson05/pages/works/cenzor/cenzor.component.scss
+++ b/app/lesson05/pages/works/cenzor/cenzor.component.scss
@@ -1,17 +1,17 @@
-.header {
-    height: 100px;
-    width: 100%;
-    background: ghostwhite;
-    line-height: 100px;
-    text-align: center;
-}
+// .header {
+//     height: 100px;
+//     width: 100%;
+//     background: ghostwhite;
+//     line-height: 100px;
+//     text-align: center;
+// }
 
-.container {
-    width: 1440px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
+// .container {
+//     width: 1440px;
+//     display: flex;
+//     justify-content: center;
+//     flex-wrap: wrap;
+// }
 
 .section-form {
     position: fixed;
