--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,1 +1,5 @@
-<app-lesson04></app-lesson04>
+<!-- <app-lesson01></app-lesson01> -->
+<app-header></app-header>
+<main>
+    <router-outlet></router-outlet>
+</main>
