Lesson06. Angular blog

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,5 +1,6 @@
-<!-- <app-lesson01></app-lesson01> -->
 <app-header></app-header>
 <main>
-    <router-outlet></router-outlet>
+    <app-lesson06></app-lesson06>
+    <app-login></app-login>
+    <!-- <app-addpost></app-addpost> -->
 </main>
